re PR target/14478 ([3.3 only] rs6000 geu/ltu patterns generate incorrect code)

PR target/14478
	* config/rs6000/rs6000.c (reg_or_neg_short_operand): Don't allow zero.

From-SVN: r82316